integrates\fix(front): #4038 add word break
- Add work-break on the css to avoid the overflow.


Former-commit-id: 73a249e836aab47f3fdc022bb5835af2a82eafb3

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -859,6 +859,7 @@ label {
 
 :global .ww-break-word {
   word-wrap: break-word;
+  word-break: break-all;
 }
 
 /* Custom media */
